remove reference to List.of